# BlogCommerce

./: .env.bak  .env.example  .gitignore  COMPLETE_E2E_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURE_IMPLEMENTATION_REPORT.md  GEMINI.md  INSTALL.md  README.md  README_ADMIN.md  README_MAIN.md  ReadMe.md  START_GUIDE.md  SYSTEM_TEST_REPORT.md  TESTING_REPORT.md  VIEW_TRACKING_SUMMARY.md  add_ai_settings.py  admin_login_guide.py  admin_pages_test_results_20250706_215028.json  alembic.ini  buglist.md  build.sh  check_admin.py  check_admin_pass.py  check_data.py  check_db.py  check_products.py  conftest.py  create_admin.py  create_analytics_test_data.py  create_blog_content.py  create_blog_images.py  create_comprehensive_blog_content.py  create_placeholder_images.py  create_test_data.py  debug_login.py  demo_payment.py  diff.sh  download_images.py  (+35 more)
_archive/: create_test_data.py  init_settings.py  reset_admin_password.py  reset_and_create_test_data.py
admin/: index.html
admin-src/: index.html  package-lock.json  package.json  vite.config.js  watch_build.sh
alembic/: README.md  env.py
app/: __init__.py  auth.py  config.py  database.py  main.py  middleware.py
backend/: README.md  database.py  init_db.py  main.py
docs/: DOCUMENTATION_CLEANUP_REPORT.md  PAYMENT_GUIDE.md  PAYMENT_PLAN.md  PAYMENT_TESTING_PLAN.md  README.md  README_deployment_backup.md
frontend/: README.md  env.example  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
test-reports/: payment-testing-report.md  test-summary.md
(+265 files in other folders)
